# social_media

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json
src/: App.css  App.jsx  db.rs  index.css  main.jsx  main.rs  posts.rs  types.rs  users.rs
src/components/: about.jsx  footer.jsx  home.jsx  login.jsx  navbar.jsx  profile.jsx  signup.jsx
