[package]
name = "social_media"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
mongodb = "2.8.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
